tests/fixtures/invalid/pow_int_list_float.py
# Cannot call pow() with Int, List[int], Float
x = pow(1, [1, 2, 3], 1.0)
